@@ -105,7 +105,6 @@ SET(OSS_OBJS             src/backends/alc_backend_oss.c)
 SET(SOLARIS_OBJS         src/backends/alc_backend_solaris.c)
 SET(WINDOWS_OBJS         src/backends/alc_backend_windows.c)
 SET(ALSA_OBJS            src/backends/alc_backend_alsa.c)
-SET(ARTS_OBJS            src/backends/alc_backend_arts.c)
 SET(ESD_OBJS             src/backends/alc_backend_esd.c)
 SET(NULL_OBJS            src/backends/alc_backend_null.c)
 SET(SDL_OBJS             src/backends/alc_backend_sdl.c)
@@ -176,8 +175,6 @@ ENDIF(CMAKE_SYSTEM MATCHES "Linux")
 #ENDIF(WIN32)
 
 OPTION(NATIVE      "native back-end"      ON)
-OPTION(ARTS        "arts back-end"        ON)
-OPTION(ARTS_DLOPEN "arts dynamic loading" ON)
 OPTION(DMEDIA      "DMedia/Irix back-end" ON)
 OPTION(ESD         "esd back-end"         ON)
 OPTION(ESD_DLOPEN  "esd dynamic loading"  ON)
@@ -358,7 +355,6 @@ FIND_PACKAGE(OpenALBackends)
 IF(CMAKE_SYSTEM MATCHES "Linux")
   CHECK_BACKEND(ALSA   alsa       asound     alsa/asoundlib.h    snd_pcm_info_sizeof)
 ENDIF(CMAKE_SYSTEM MATCHES "Linux")
-CHECK_BACKEND(ARTS   artsc      artsc      artsc.h             arts_free)
 CHECK_BACKEND(DMEDIA ""         audio      dmedia/audio.h      alGetResourceByName)
 CHECK_BACKEND(ESD    esd        esd        esd.h               esd_audio_open)
 CHECK_BACKEND(OSS    ""         ""         sys/soundcard.h     "")
