@@ -678,79 +678,6 @@ fi
 OPENAL_ENABLE([ALSA backend], [openal_backend_alsa_support],
               [USE_BACKEND_ALSA], [USEBACKENDALSA])
 
-# check for aRts backend #######################################################
-
-AC_ARG_ENABLE([arts],
-[AS_HELP_STRING([--enable-arts],
-                [enable aRts backend @<:@default=auto@:>@])])
-
-AC_ARG_ENABLE([arts-dlopen],
-[AS_HELP_STRING([--enable-arts-dlopen],
-                [dynamically load aRts libs @<:@default=yes@:>@])])
-
-if test "x$enable_arts" = xno; then
-  openal_backend_arts_support=disabled
-else
-  AC_ARG_VAR([ARTSC_CONFIG], [aRts configuration utility])
-  AC_CHECK_PROGS([ARTSC_CONFIG], [artsc-config], [none])
-  AC_CACHE_CHECK([for aRts compiler flags], [openal_cv_cflags_arts],
-    [openal_cv_cflags_arts=unknown
-     test "x$ARTSC_CONFIG" != xnone && openal_cv_cflags_arts="`$ARTSC_CONFIG --cflags`"
-     test -z "$openal_cv_cflags_arts" && openal_cv_cflags_arts=none])
-  case $openal_cv_cflags_arts in
-    unknown|none) openal_cflags_arts="" ;;
-    *) openal_cflags_arts=$openal_cv_cflags_arts ;;
-  esac
-  openal_saved_CFLAGS=$CFLAGS
-  CFLAGS="$CFLAGS $openal_cflags_arts"
-  AC_CHECK_HEADER([artsc.h],
-    [if test "x$enable_arts_dlopen" != xno; then
-       openal_backend_arts_support=dynamic
-       FEATURECFLAGS="$FEATURECFLAGS $openal_cflags_arts"
-       AC_DEFINE([OPENAL_DLOPEN_ARTS], [1], [dynamically load aRts libs])
-     else
-       AC_CACHE_CHECK([for aRts linker flags], [openal_cv_libs_arts],
-         [if test "x$ARTSC_CONFIG" != xnone; then
-            openal_cv_libs_arts="`$ARTSC_CONFIG --libs`"
-            if test -z "$openal_cv_libs_arts"; then
-              openal_cv_libs_arts=none
-            fi
-          else
-            openal_cv_libs_arts=unknown
-          fi])
-       if test "x$openal_cv_libs_arts" = xunknown; then
-         openal_libs_arts="-lartsc"
-       else
-         openal_libs_arts=$openal_cv_libs_arts
-       fi
-       openal_saved_LIBS=$LIBS
-       LIBS="$openal_libs_arts $LIBS"
-       AC_CACHE_CHECK([for arts_free], [openal_cv_func_arts_free],
-         [AC_LINK_IFELSE([AC_LANG_CALL([], [arts_free])],
-            [openal_cv_func_arts_free=yes],
-            [openal_cv_func_arts_free=no])])
-       if test "x$openal_cv_func_arts_free" = xyes; then
-         openal_backend_arts_support=static
-         FEATURECFLAGS="$FEATURECFLAGS $openal_cflags_arts"
-       else
-         openal_backend_arts_support=none
-         LIBS=$openal_saved_LIBS
-         if test "x$enable_arts" = xyes; then
-           AC_MSG_WARN([--enable-arts ignored because the aRts library could not be found.])
-         fi
-       fi
-     fi],
-    [openal_backend_arts_support=none
-     if test "x$enable_arts" = xyes; then
-       AC_MSG_WARN([--enable-arts ignored because the aRts header could not be found.])
-     fi],
-    [AC_INCLUDES_DEFAULT([])])
-  CFLAGS=$openal_saved_CFLAGS
-fi
-
-OPENAL_ENABLE([aRts backend], [openal_backend_arts_support],
-              [USE_BACKEND_ARTS], [USEBACKENDARTS])
-
 # check for OSS backend ########################################################
 
 AC_ARG_ENABLE([oss],
